--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link ref="style" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Howiya</h1>
+    <form>
+      <input type="email" placeholder="Enter your email" />
+      <input type="password" placeholder="Enter your password" />
+      <input type="submit" value="Login" />
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
